--- a/sass/util/_align.sass
+++ b/sass/util/_align.sass
@@ -23,3 +23,10 @@
       text-align: center
 
 
+    &--vertical-middle
+      vertical-align: middle
+
+    &--vertical-base
+      vertical-align: baseline
+
+
