--- a/sass/antibase.sass
+++ b/sass/antibase.sass
@@ -54,21 +54,9 @@
 // ----------------------------------
 // layout layout
 // ----------------------------------
-@if $use_layout
-    @import "layout/grid"
-    @import "layout/wrap"
-    @import "layout/inner"
-    @import "layout/page"
-    @import "layout/pageheader"
-    @import "layout/breadCrumb"
-    @import "layout/globalNav"
-    @import "layout/pageHeader"
-    @import "layout/pagebody"
-    @import "layout/pagefooter"
-    @import "layout/goToTop"
+@import "layout/grid"
+@import "layout/wrap"
+@import "layout/container"
+@import "layout/twoCol"
 
 
-// ----------------------------------
-// module
-// ----------------------------------
-@import "module/twoCol"
