--- a/sass/util/_device.sass
+++ b/sass/util/_device.sass
@@ -1,12 +1,25 @@
 .u
-  &-is
-    &--sp
-      display: none !important
+    &-is
+        &--pc
+            +tablet
+                display: none !important
 
-      +tablet
-        display: inherit !important
+        &--sp
+            display: none !important
 
-    &--pc
+            +tablet
+                display: inherit !important
 
-      +tablet
-        display: none !important
+
+    &--inner
+        &-tablet
+            +tablet
+                margin:
+                    left: 10px
+                    right: 10px
+
+        &-sp
+            +smartphone
+                margin:
+                    left: 10px
+                    right: 10px
