--- a/sass/conf/_setting.sass
+++ b/sass/conf/_setting.sass
@@ -2,6 +2,8 @@
 // html5
 $use_html5: true !default
 
+// reset sass
+$reset_type: "reset" !default
 
 //--------------------------------------------------
 // supported browser
