update layout something

--- a/sass/conf/_setting.sass
+++ b/sass/conf/_setting.sass
@@ -25,22 +25,15 @@ $support-android4: true !default
 
 
 //-------------------------------------------------
-// グリッドサイズ
+// grid size
 //-------------------------------------------------
-$column-width: 62px !default
-$gutter-width: 26px !default
 
-// コンテンツ全体のサイズ
-$content-width: ( $column-width * 12 ) + ( $gutter-width * 11 )
-//$content-width: 1000px
+$content-width: 1000px !default
+$desktop-width: $content-width !default
 
-// レスポンシブフラグ
-$support-responsive: true !default
+$gutter-width: 20px !default
 
 $sp-width: 640px !default
-$tablet-width: 768px !default
-$desktop-width: $content-width !default
-$rowBreak-width: 800px !default
 
 
 // ------------------------------------------------
