--- a/sass/layout/_grid.sass
+++ b/sass/layout/_grid.sass
@@ -3,7 +3,8 @@
         +row
 
         @for $i from 1 through 12
-            > .col#{$i}
+            > .l-col#{$i}
                 +col($i)
+
 
 
