--- a/sass/base/_heading.sass
+++ b/sass/base/_heading.sass
@@ -5,8 +5,9 @@ h1,h2,h3,h4,h5,h6
   color: inherit
 
 
-h1, h2, h3, h4, h5, h6
-  margin: .8em 0
+@if $reset_type == "normalize"
+    h1, h2, h3, h4, h5, h6
+      margin: .8em 0
 
 
 h1
