--- a/sass/mixin/_replaceImg.sass
+++ b/sass/mixin/_replaceImg.sass
@@ -9,7 +9,7 @@
 
     width: $wd
     height: 0
-    padding-top: $ht / 2
+    padding-top: $ht
 
     background: url($url) no-repeat left top
 
@@ -27,5 +27,3 @@
 
     &:hover
         background-position: left $top
-
-
