--- a/sass/util/_txt.sass
+++ b/sass/util/_txt.sass
@@ -1,13 +1,6 @@
 
-// Helper
-//
-// html helper class
-//
-// Markup: - <p class="tar">テキストを右寄せにします</p>
-//
-// Styleguide 3
 .u
-  
+
   &-txt
 
     &--strong
@@ -20,10 +13,7 @@
       line-height: 120%
 
     &--red
-      color: $darkRed
+      color: $red
 
     &--orange
       color: $orange
-
-
-
