--- a/sass/base/_root.sass
+++ b/sass/base/_root.sass
@@ -6,9 +6,16 @@ html,body
   font-size: $baseFontSize
 
 body
-  box-sizing: border-box
-  background: $white
-  color: $baseFont
+  background: $bodyBgColor
+  color: $baseFontColor
   line-height: 1.6
-  //letter-spacing: 0.1em
-  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif
+  font-family: $baseFontFamily
+
+*,
+*:before,
+*:after
+    @if $support-ie7
+    @else
+        -webkit-box-sizing: border-box
+        -moz-box-sizing: border-box
+        box-sizing: border-box
