--- a/sass/util/_device.sass
+++ b/sass/util/_device.sass
@@ -25,11 +25,11 @@
         &--tablet
             +tablet
                 margin:
-                    left: 10px
-                    right: 10px
+                    left: $tablet-inner-margin
+                    right: $tablet-inner-margin
 
         &--sp
             +smartphone
                 margin:
-                    left: 10px
-                    right: 10px
+                    left: $sp-inner-margin
+                    right: $sp-inner-margin
